--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,14 @@ dependencies:
   flutter_bloc_pattern: ^0.0.1+1
   distinct_value_connectable_observable: ^1.0.0+1
   shared_preferences: ^0.4.3
-  dio: ^2.0.0
+  http: ^0.12.0+1
   collection: ^1.14.11
   url_launcher: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito:
 
 flutter:
   uses-material-design: true
